= Changelog of IDEasy

This file documents all notable changes to https://github.com/devonfw/IDEasy[IDEasy].

== 2026.02.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1562[#1562]: Update documentation regarding environmental variables
* https://github.com/devonfw/IDEasy/issues/1691[#1691]: Update references to UrlUpdaters in the documentation
* https://github.com/devonfw/IDEasy/issues/1683[#1683]: Updated the link for bug-ticket creation that's shown when en error is encountered

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/40?closed=1[milestone 2026.02.001].

== 2026.01.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1298[#1298]: Support for extra tool version
* https://github.com/devonfw/IDEasy/issues/1653[#1653]: Implementation of getEdition and getVersion for Docker
* https://github.com/devonfw/IDEasy/issues/1602[#1602]: Being offline can block ide startup
* https://github.com/devonfw/IDEasy/issues/1667[#1667]: ide command without arguments triggers download and installation
* https://github.com/devonfw/IDEasy/issues/1677[#1677]: Add release for linux-arm architecture
* https://github.com/devonfw/IDEasy/issues/1679[#1679]: Npm based commandlets fail to determine installed version of npm tool

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/39?closed=1[milestone 2026.01.001].

== 2025.12.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1166[#1166]: Automatic project import for IntelliJ
* https://github.com/devonfw/IDEasy/issues/1508[#1508]: xml merger fails when merging empty file
* https://github.com/devonfw/IDEasy/issues/1660[#1660]: ide status still failing
* https://github.com/devonfw/IDEasy/issues/1646[#1646]: Duplicated options from CVE update suggestion