@@ -178,14 +178,13 @@ public abstract class AbstractUpdateCommandlet extends Commandlet {
         this.context.info("Skipping git pull in settings due to code repository. Use --force-pull to enforce pulling.");
       }
     } else {
-      String repositoryUrl = getOrAskSettingsUrl();
-      GitUrl gitUrl = GitUrl.of(repositoryUrl);
+      GitUrl gitUrl = getOrAskSettingsUrl();
       checkProjectNameConvention(gitUrl.getProjectName());
       initializeRepository(gitUrl);
     }
   }
 
-  private String getOrAskSettingsUrl() {
+  private GitUrl getOrAskSettingsUrl() {
 
     String repository = this.settingsRepo.getValue();
     repository = handleDefaultRepository(repository);
@@ -200,11 +199,19 @@ public abstract class AbstractUpdateCommandlet extends Commandlet {
       defaultUrl = IdeContext.DEFAULT_SETTINGS_REPO_URL;
       this.context.info(MESSAGE_SETTINGS_REPO_URL, this.context.getSettingsPath());
     }
-    while (repository == null || repository.isBlank()) {
+    GitUrl gitUrl = null;
+    if (repository != null) {
+      gitUrl = GitUrl.of(repository);
+    }
+    while ((gitUrl == null) || !gitUrl.isValid()) {
       repository = this.context.askForInput(userPromt, defaultUrl);
       repository = handleDefaultRepository(repository);
+      gitUrl = GitUrl.of(repository);
+      if (!gitUrl.isValid()) {
+        this.context.warning("The input URL is not valid, please try again.");
+      }
     }
-    return repository;
+    return gitUrl;
   }
 
   private String handleDefaultRepository(String repository) {
